--- a/DoXuanTrang_211240555/app/src/main/res/layout/activity_main.xml
+++ b/DoXuanTrang_211240555/app/src/main/res/layout/activity_main.xml
@@ -28,13 +28,26 @@
         android:id="@+id/lv_lstPerson"
         android:layout_width="match_parent"
         android:layout_height="380dp"/>
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/btn_add"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:src="@android:drawable/ic_input_add"
-        android:layout_gravity="right"/>
+        android:orientation="horizontal"
+        android:weightSum="2">
+        <Spinner
+            android:id="@+id/spn_sortName"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_gravity="center_vertical"/>
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/btn_add"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:src="@android:drawable/ic_input_add"
+            android:layout_gravity="right"/>
+    </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -78,6 +91,5 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="Stop"/>
-
     </LinearLayout>
 </LinearLayout>
