--- a/DoXuanTrang_211240555/app/src/main/res/layout/item.xml
+++ b/DoXuanTrang_211240555/app/src/main/res/layout/item.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/white">
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/white"
+    android:layout_margin="3dp"
+    app:cardCornerRadius="3dp">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
