--- a/QuanLyThiSinh/app/src/main/res/menu/context_menu.xml
+++ b/QuanLyThiSinh/app/src/main/res/menu/context_menu.xml
@@ -5,4 +5,7 @@
     <item
         android:id="@+id/action_delete"
         android:title="Delete" />
+    <item
+        android:id="@+id/action_search"
+        android:title="Tìm kiếm số điện thoại" />
 </menu>
